--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.8",
     "morgan": "~1.9.1",
     "redis": "^3.0.2",
